# deadlinkrs

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  files.rs  lib.rs  log.rs  main.rs
src/files/: file.rs  links.rs
src/files/links/: cache.rs  link.rs  results.rs
tests/: test.rs
tests/common/: mod.rs
tests_data/: README.md
