[package]
name = "deadlinkrs"
version = "0.1.0"
edition = "2021"
authors = ["Valentin DOREAU"]
rust-version = "1.65"
license = "GPL-3.0-only"
description = "Search for dead links in any kind of file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0.27", features = ["cargo"] }
globset = "0.4.9"
ignore = "0.4.18"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["blocking"] }

[profile.release]
strip = true
lto = true
